--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
         "vue-template-compiler": "^2.5.21"
     },
     "dependencies": {
+        "@vimeo/player": "^2.6.5",
         "cropperjs": "^1.4.3",
+        "fs": "0.0.1-security",
+        "vimeo": "^2.1.1",
         "vue-upload-component": "^2.8.16",
         "webpack-cli": "^3.1.2"
     }
